// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Advanced Settings: Voice Announcement should render announcement 1`] = `
<EuiScreenReaderOnly>
  <div
    aria-label="Advanced Settings results info"
    aria-live="polite"
    role="region"
  >
    <EuiDelayRender
      delay={500}
    >
      <FormattedMessage
        defaultMessage="You searched for {query}. There {optionLenght, plural, one {is # option} other {are # options}} in {sectionLenght, plural, one {# section} other {# sections}}"
        id="advancedSettings.voiceAnnouncement.searchResultScreenReaderMessage"
        values={
          Object {
            "optionLenght": 1,
            "query": "dark theme",
            "sectionLenght": 1,
          }
        }
      />
    </EuiDelayRender>
  </div>
</EuiScreenReaderOnly>
`;

exports[`Advanced Settings: Voice Announcement should render nothing 1`] = `
<EuiScreenReaderOnly>
  <div
    aria-label="Advanced Settings results info"
    aria-live="polite"
    role="region"
  >
    <EuiDelayRender
      delay={500}
    >
      <FormattedMessage
        defaultMessage="There {optionLenght, plural, one {is # option} other {are # options}} in {sectionLenght, plural, one {# section} other {# sections}}"
        id="advancedSettings.voiceAnnouncement.noSearchResultScreenReaderMessage"
        values={
          Object {
            "optionLenght": 1,
            "sectionLenght": 1,
          }
        }
      />
    </EuiDelayRender>
  </div>
</EuiScreenReaderOnly>
`;
